# dark-factory

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: main.rs  pipeline.rs  post_process.rs  rewrites.rs  transpiler.rs  zeta.rs
